plugins {
    id 'fabric-loom' version "1.14-SNAPSHOT"
}

project.ext.lwjglVersion = "3.3.3"
version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

loom {
    accessWidenerPath = file("src/main/resources/pupper.accesswidener")
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url "https://api.modrinth.com/maven" }
    maven { url "https://maven.lenni0451.net/everything" }
    maven { url "https://repo.viaversion.com/" }
    maven { url "https://repo.opencollab.dev/maven-snapshots/" }
    maven { url "https://maven.terraformersmc.com/" }
}

configurations {
    jij
    modJij
    include.extendsFrom modJij
    modImplementation.extendsFrom modJij
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    modImplementation "com.viaversion:viafabricplus-api:4.1.5"
    modRuntimeOnly "maven.modrinth:sodium:mc1.21.5-0.6.13-fabric"
    modRuntimeOnly "maven.modrinth:iris:1.8.11+1.21.5-fabric"
    modRuntimeOnly "maven.modrinth:sodium-extra:mc1.21.5-0.6.3+fabric"
    modRuntimeOnly "maven.modrinth:lithium:mc1.21.5-0.16.3-fabric"
    modImplementation "maven.modrinth:in-game-account-switcher:Rqmwlwr6"
    modImplementation "com.viaversion:viafabricplus:4.1.5"
    modRuntimeOnly "maven.modrinth:immediatelyfast:1.9.7+1.21.5-fabric"
    // modRuntimeOnly "maven.modrinth:entityculling:ldvBBWG2"
    modImplementation "maven.modrinth:modmenu:14.0.0"

    jij 'io.github.smartboot.socket:aio-core:1.7.1'
    jij 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    jij 'io.github.humbleui:types:0.2.0'
    jij 'io.github.humbleui:skija-windows-x64:0.143.2'
    jij 'io.github.humbleui:skija-linux-x64:0.143.2'
    jij 'io.github.humbleui:skija-linux-arm64:0.143.2'
    jij 'io.github.humbleui:skija-macos-x64:0.143.2'
    jij 'com.kohlschutter.junixsocket:junixsocket-common:2.10.1'
    jij 'org.java-websocket:Java-WebSocket:1.6.0'
    jij 'com.mpatric:mp3agic:0.9.1'
    jij 'javazoom:jlayer:1.0.1'
    jij 'com.googlecode.soundlibs:mp3spi:1.9.5.4'
    jij 'org:jaudiotagger:2.0.3'
    jij 'com.googlecode.soundlibs:jlayer:1.0.1.4'
    jij "net.lenni0451:MCPing:1.4.2"
    jij "net.lenni0451:Reflect:1.4.0"
    modImplementation 'net.java.dev.jna:jna:5.18.1'
    modImplementation 'net.java.dev.jna:jna-platform:5.18.1'

    modJij 'com.github.CCBlueX:mcef:3.1.3-1.21.5'

    def lwjglNfdDeps = [
            "org.lwjgl:lwjgl-nfd:$lwjglVersion",
            "org.lwjgl:lwjgl-nfd::natives-linux",
            "org.lwjgl:lwjgl-nfd::natives-macos",
            "org.lwjgl:lwjgl-nfd::natives-macos-arm64",
            "org.lwjgl:lwjgl-nfd::natives-windows"
    ]

    lwjglNfdDeps.each { dep ->
        jij dep
        implementation dep
        include dep
    }

    afterEvaluate {
        configurations.jij.incoming.resolutionResult.allDependencies.each {
            dependencies.include(dependencies.implementation(dependencies.compileOnlyApi(it.requested.toString()) {
                transitive = false
            }))
        }
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }

    doLast {
        def resourcePath = sourceSets.main.resources.srcDirs[0]
        def iconFile = new File(resourcePath, "assets/pupper/logo.png")
        if (!iconFile.exists()) {
            throw new GradleException("Pupper icon not found: ${iconFile.absolutePath}")
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}
